[LUCENE-8343] Adjustments for Long creation according to best practices